# Luminous-BI

./: .gitignore  README.md  app.py
backend/: .env.example  app.py  config.py  database.py  pyproject.toml  requirements.txt  uvicorn.toml
backend/models/: db_models.py  schemas.py
backend/routes/: analyze.py  auth.py  dashboard.py  history.py  upload.py
backend/services/: auth_service.py  chart_service.py  decision_service.py  llm_service.py  pandas_service.py  storage_service.py
backend/utils/: validator.py
frontend/: .env.example  README.md  index.html  package-lock.json
frontend/src/app/: App.tsx  routes.tsx
frontend/src/app/components/: app-layout.tsx  app-navbar.tsx  app-sidebar.tsx  data-table-view.tsx  empty-state.tsx  feedback-modal.tsx  index.ts  insight-card.tsx  landing-page.tsx  loading-state.tsx  require-auth.tsx  sql-view.tsx  stat-card.tsx  theme-toggle.tsx
frontend/src/app/components/charts/: bar-chart-component.tsx  line-chart-component.tsx  pie-chart-component.tsx
frontend/src/app/contexts/: theme-context.tsx
frontend/src/app/data/: mock-data.ts
frontend/src/app/lib/: api.ts  auth-storage.ts  storage.ts
frontend/src/app/pages/: comparison-page.tsx  dashboard-page.tsx  history-page.tsx  not-found-page.tsx  query-explorer-page.tsx  saved-dashboards-page.tsx  settings-page.tsx  signin-page.tsx  signup-page.tsx  upload-page.tsx
frontend/src/styles/: fonts.css  index.css  theme.css
