[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luminous-bi-api"
version = "0.1.0"
description = "Backend API for Luminous BI"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
    "pandas>=2.3.0",
    "sqlalchemy>=2.0.48",
    "asyncpg>=0.30.0",
    "python-dotenv>=1.2.2",
    "google-generativeai>=0.8.5",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
ai = [
    "pandasai==2.3.2",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[tool.setuptools]
py-modules = ["app", "config", "database"]

[tool.setuptools.packages.find]
include = ["models*", "routes*", "services*", "utils*"]
